--- a/views/sub_views/header.ejs
+++ b/views/sub_views/header.ejs
@@ -50,6 +50,15 @@
     input[readonly] {
       background-color: rgb(199, 199, 199);
       cursor: default;
+      border: none;
+      padding: 5px;
+      border-radius: 5px 5px;
+    }
+    input {
+      border-radius: 5px 5px;
+      font-size: 20px;
+      /* display: flex;
+      justify-content: center; */
     }
 
 
