--- a/views/create_kanban_out.ejs
+++ b/views/create_kanban_out.ejs
@@ -44,13 +44,13 @@
 
         <div>
         <!-- <h3>Scan QR Production</h3> -->
-        <label for="qr_prod" name="qr_prod" class="mt-3">QR Production</label>
+        <label for="qr_kanban_in" name="qr_kanban_in" class="mt-3">QR Kanban IN</label>
         <input
             type="text"
-            name="qr_prod"
-            id="qr_prod"
+            name="qr_kanban_in"
+            id="qr_kanban_in"
             class="form-control mb-3"
-            placeholder="Please scan QR production"
+            placeholder="Please scan QR Kanban IN"
         />
         <label for="kanban_out_date" name="kanban_out_date" class=""
             >Kanban Out Date</label
@@ -83,6 +83,7 @@
         >
             Submit
         </button>
+        <a href="/create_kanban_out/reset_kb_out" class="btn btn-danger">Reset KB out</a>
         </div>
     </form>
 
@@ -93,6 +94,8 @@
             <th>QR KANBAN IN</th>
             <th>QR PRODUCTION</th>
             <th>QR KANBAN OUT</th>
+            <th>OLD PART NUMBER</th>
+            <th>NEW PART NUMBER</th>
             <th>KANBAN OUT DATE</th>
             <th>KANBAN OUT TIME</th>
             <th>QTY</th>
@@ -111,6 +114,12 @@
                         </td>
                         <td style="border: 3px solid green;">
                             <input type="text" id="qr_kanban_out" name="qr_kanban_out" value="<%= row.qr_kanban_out %>" readonly>
+                        </td>
+                        <td style="border: 3px solid green;">
+                          <input type="text" id="partNumber" name="partNumber" value="<%= row.partNumber %>" readonly>
+                        </td>
+                        <td style="border: 3px solid green;">
+                          <input type="text" id="dnth_partNumber" name="dnth_partNumber" value="<%= row.dnth_partNumber %>" readonly>
                         </td>
                         <td>
                             <input type="text" id="kanban_out_date" name="kanban_out_date" value="<%= row.kanban_out_date ? row.kanban_out_date.toLocaleDateString('en-GB') : '' %>" readonly>
@@ -134,12 +143,12 @@
     </div>
 
     <script>
-      document.getElementById("qr_prod").addEventListener("input", function () {
-        const qrProdVal = this.value;
+      document.getElementById("qr_kanban_in").addEventListener("input", function () {
+        const qrKanbanInVal = this.value;
         const kanbanOutDate = document.getElementById("kanban_out_date");
         const kanbanOutTime = document.getElementById("kanban_out_time");
 
-        if (qrProdVal.length >= 3) {
+        if (qrKanbanInVal.length >= 3) {
             const currentDate = new Date();
           const currentYear = currentDate.getFullYear();
           const currentMonth = String(currentDate.getMonth() + 1).padStart(
