--- a/views/admin_page.ejs
+++ b/views/admin_page.ejs
@@ -8,6 +8,8 @@
 </head>
 <body>
     <%- include('sub_views/header') %>
+    <a class="home" href="/admin_page/master_main">Master Main</a>
+    <a class="home" href="/admin_page/master_setting">Master Setting</a>
 
     <table class="table">
         <tr>
