--- a/views/sub_views/header.ejs
+++ b/views/sub_views/header.ejs
@@ -88,8 +88,8 @@
 
 <div class="header">
     <a class="home" href="/admin_page">Home</a>
-    <a class="home" href="/admin_page/master_main">Master Main</a>
-    <a class="home" href="/admin_page/master_setting">Master Setting</a>
+    <!-- <a class="home" href="/admin_page/master_main">Master Main</a>
+    <a class="home" href="/admin_page/master_setting">Master Setting</a> -->
     <a class="home" href="/admin_page/receive_scan_master">Receive Scan</a>
     <a class="home" href="/dnth_data">DNTH Data</a>
     <a class="home" href="/pc_page">PC Page</a>
@@ -105,6 +105,7 @@
     </div> -->
     <a class="home" href="/create_kanban_out">Create KB Out</a>
     <a class="home" href="/create_pl_new">Create PL</a>
+    <a class="home" href="/sdm_chain">Overall Chain</a>
     <a class="home" href="/logout">Logout</a>
 </div>
 
