--- a/views/sdm_chain_backup.ejs
+++ b/views/sdm_chain_backup.ejs
@@ -17,8 +17,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items: center;
-            /* border: 3px solid red; */
+            border: 3px solid red;
 
         }
         p {
@@ -34,11 +33,11 @@
             .top_block {
                 width: 100%;
                 height: 20rem;
-                /* border: 3px solid red; */
+                border: 3px solid red;
                 /* overflow: hidden; */
                 display: flex;
                 flex-direction: row;
-                /* min-width: 400px; */
+                min-width: 400px;
             }
             p {
                 font-weight: bold;
@@ -67,8 +66,8 @@
             }
             .tsk_stock .image {
                 width: 100%;
-                height: 18rem;
-                /* border: 3px solid rgb(63, 81, 247); */
+                height: 8rem;
+                /* border: 1px solid rgb(160, 160, 160); */
                 display: flex;
                 justify-content: center;
                 overflow: hidden;
@@ -76,13 +75,13 @@
             }
             .image2 {
                 width: 50%;
-                height: 11rem;
+                height: 8rem;
                 /* border: 1px solid rgb(160, 160, 160); */
                 display: flex;
                 justify-content: center;
                 overflow: hidden;
                 margin-bottom: 2rem;
-                margin-left: 5rem;
+                margin-left: 25%;
             }
             .model {
                 width: 100%;
@@ -108,11 +107,11 @@
             }
             .detail_block {
                 width: 100%;
-                height: 100%;
+                height: 5rem;
                 /* border: 1px solid rgb(171, 241, 241); */
                 display: flex;
                 flex-direction: column;
-                justify-content: flex-start;
+                justify-content: center;
                 padding: 4px 4px;
                 /* background-color: aqua; */
             }
@@ -124,7 +123,7 @@
                 justify-content: center;
                 width: 100%;
                 height: 2rem;
-                /* border: 3px solid rgb(233, 22, 22); */
+                /* border: 1px solid rgb(160, 160, 160); */
                 background-color: white;
             }
             .detail_block .stock_cap {
@@ -139,7 +138,7 @@
 
             .dnth_stock {
                 width: 23rem;
-                height: 100%;
+                height: 19rem;
                 /* border: 1px solid rgb(160, 160, 160); */
                 border-radius: 8px 8px;
                 position: relative;
@@ -151,19 +150,17 @@
             .dnth_stock .fg_detail {
                 display: flex;
                 justify-content: center;
-                width: 100%;
-                height: 100%;
-                /* border: 3px solid rgb(209, 0, 0); */
+                
+                /* border: 1px solid rgb(160, 160, 160); */
             }
             .dnth_stock .fg_detail .receive_block {
                 width: 50%;
-                height: 100%;
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
                 background-color: rgb(202, 202, 202);
                 margin-right: 5px;
-                /* border: 3px solid rgb(209, 0, 0); */
+                /* border: 1px solid rgb(160, 160, 160); */
             }
             .dnth_stock .fg_detail .stock_block {
                 width: 50%;
@@ -176,7 +173,7 @@
 
             .ttt_stock {
                 width: 23rem;
-                height: 100%;
+                height: 19rem;
                 /* border: 1px solid rgb(160, 160, 160); */
                 border-radius: 8px 8px;
                 position: relative;
@@ -187,8 +184,6 @@
             }
             .ttt_stock .fg_detail {
                 display: flex;
-                width: 100%;
-                height: 100%;
                 /* flex-direction: column; */
                 justify-content: center;
                 /* border: 1px solid rgb(160, 160, 160); */
@@ -213,7 +208,7 @@
 
             .nts_stock {
                 width: 23rem;
-                height: 100%;
+                height: 19rem;
                 /* border: 1px solid rgb(160, 160, 160); */
                 border-radius: 8px 8px;
                 position: relative;
@@ -224,13 +219,10 @@
             .nts_stock .fg_detail {
                 display: flex;
                 justify-content: center;
-                width: 100%;
-                height: 100%;
                 /* border: 1px solid rgb(160, 160, 160); */
             }
             .nts_stock .fg_detail .receive_block {
                 width: 50%;
-                /* height: 100%; */
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
@@ -252,14 +244,14 @@
                 height: 10rem;
                 /* border: 2px solid rgb(7, 124, 160); */
                 position: relative;
-                left: 35rem;
+                left: 86rem;
                 overflow: hidden;
                 display: flex;
                 justify-content: center;
             }
             .bottom_block {
                 width: 100%;
-                height: 20rem;
+                height: 70%;
                 /* border: 2px solid rgb(7, 124, 160); */
                 position: relative;
                 display: flex;
@@ -268,7 +260,7 @@
 
             .arrow1 {
                 width: 7rem;
-                height: 7rem;
+                height: 2rem;
                 /* border: 3px solid red; */
                 position: absolute;
                 left: 17rem;
@@ -276,14 +268,14 @@
             }
             .arrow2 {
                 width: 7rem;
-                height: 7rem;
+                height: 1.5rem;
                 position: absolute;
                 left: 39rem;
                 transform: translateY(4rem);
             }
             .arrow3 {
                 width: 7rem;
-                height: 7rem;
+                height: 1.5rem;
                 position: absolute;
                 left: 69rem;
                 transform: translateY(4rem);
@@ -482,15 +474,15 @@
 
             <!-- div arrow image -->
             <div class="arrow1">
-                <img src="/static/picture/truck.png" alt="">
+                <img src="/static/picture/arrow.png" alt="">
             </div>
             <!-- div arrow image -->
             <div class="arrow2">
-                <img src="/static/picture/truck.png" alt="">
+                <img src="/static/picture/arrow.png" alt="">
             </div>
             <!-- div arrow image -->
             <div class="arrow3">
-                <img src="/static/picture/truck.png" alt="">
+                <img src="/static/picture/arrow.png" alt="">
             </div>
 
         </div>
@@ -686,6 +678,6 @@
         setInterval(() => {
             location.reload();
         }, 15000);
-    </script>
+sdm_chain_backup    </script>
 </body>
 </html>
