--- a/views/sub_views/header.ejs
+++ b/views/sub_views/header.ejs
@@ -6,6 +6,9 @@
       /* border: 3px solid black; */
       background-color: rgb(168, 4, 4);
       margin-bottom: 5px;
+      width: 110rem;
+      /* position: absolute;
+      margin-bottom: 2rem; */
     }
     .home {
         padding: 20px 25px;
@@ -106,6 +109,7 @@
     <a class="home" href="/create_kanban_out">Create KB Out</a>
     <a class="home" href="/create_pl_new">Create PL</a>
     <a class="home" href="/sdm_chain">Overall Chain</a>
+    <a class="home" href="/internal_chain">Int. Chain</a>
     <a class="home" href="/logout">Logout</a>
 </div>
 
